--- a/deployments/gpu-scheduler.yaml
+++ b/deployments/gpu-scheduler.yaml
@@ -23,6 +23,11 @@ spec:
           volumeMounts:
             - name: tz-config
               mountPath: /etc/localtime
+          resources: 
+            limits:
+              memory: "200Mi"
+            requests:
+              memory: "200Mi"
       volumes:
         - name: tz-config
           hostPath:
