--- a/deployments/testgpupod.yaml
+++ b/deployments/testgpupod.yaml
@@ -15,16 +15,21 @@ spec:
             - nbody
             - -benchmark
             - -numdevices=1
-            - -numbodies=812000
+            - -numbodies=2000000
           resources:
             limits:
-              keti.com/mpsgpu: 2
+              keti.com/mpsgpu: 1
             requests:
               memory: "64Mi"
               cpu: "250m"
           volumeMounts:
             - name: nvidia-mps
               mountPath: /tmp/nvidia-mps
+          env:
+            - name: A
+              value: "test"    
+          command: ["echo"]
+          args: ["$(TESTNAME) $(A)"]    
       volumes:
         - name: nvidia-mps
           hostPath:
