--- a/deployments/gpu-scheduler-configmap.yaml
+++ b/deployments/gpu-scheduler-configmap.yaml
@@ -4,7 +4,7 @@ metadata:
   name: gpu-scheduler-configmap
   namespace: gpu
 data:
-  node-gpu-score-weight : "0.3 0.7"
+  node-gpu-score-weight : "0.3:0.7"
   pod-re-schedule-permit : "true"
   node-reservation-permit : "false"
   nvlink-weight-percentage : "10"
