--- a/deployments/keti-gpu-scheduler.yaml
+++ b/deployments/keti-gpu-scheduler.yaml
@@ -1,29 +1,9 @@
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: scheduler
-  namespace: gpu
----
-kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1
-metadata:
-  name: scheduler
-  namespace: gpu
-subjects:
-- kind: ServiceAccount
-  name: scheduler
-  namespace: gpu
-roleRef:
-  kind: ClusterRole
-  name: cluster-admin
-  apiGroup: rbac.authorization.k8s.io
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
     app: gpu-scheduler
-  name: gpu-scheduler
+  name: keti-gpu-scheduler
   namespace: gpu
 spec:
   selector:
@@ -37,15 +17,19 @@ spec:
     spec:
       nodeName: master
       serviceAccountName: scheduler
+      imagePullSecrets:
+        - name: regcred
       containers:
-        - name: gpu-scheduler
-          image: ketidevit2/gpu-scheduler:v0.115
+        - name: gpu-schedule
+          image: ketidevit2/gpu-scheduler:v0.251
           volumeMounts:
             - name: tz-config
               mountPath: /etc/localtime
             - name: gpu-scheduler-configmap
-              mountPath: /tmp
-          resources: 
+              mountPath: /gpu-scheduler-configmap
+            - name: config
+              mountPath: /root/.kube/  
+          resources:
             limits:
               memory: "200Mi"
             requests:
@@ -57,16 +41,6 @@ spec:
         - name: gpu-scheduler-configmap
           configMap:
             name: gpu-scheduler-configmap
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: gpu-scheduler-configmap
-  namespace: gpu
-data:
-  node-gpu-score-weight : "0.3 0.7"
-  pod-re-schedule-permit : "true"
-  node-reservation-permit : "false"
-  nvlink-weight-percentage : "10"
-  gpu-allocate-prefer : "spread"
-            
+        - name: config
+          hostPath:
+            path: /root/.kube
