--- a/deployments/keti-gpu-scheduler-concat.yaml
+++ b/deployments/keti-gpu-scheduler-concat.yaml
@@ -59,9 +59,9 @@ spec:
         - name: regcred
       containers:
         - name: gpu-schedule
-          image: ketidevit2/keti-gpu-scheduler:v0.253
-          args:
-            - --debugging=on
+          image: ketidevit2/keti-gpu-scheduler:v0.255
+          # args:
+          #   - --debugging=on
           volumeMounts:
             - name: tz-config
               mountPath: /etc/localtime
