--- a/deployments/keti-gpu-scheduler.yaml
+++ b/deployments/keti-gpu-scheduler.yaml
@@ -1,3 +1,41 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: scheduler
+  namespace: gpu
+  labels:
+    component: gpu-scheduler
+    app: gpu-scheduler
+  annotations:
+    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
+spec:
+  ports:
+  - port: 8888
+    targetPort: 8888
+    name: server
+  selector:
+    component: gpu-scheduler
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: scheduler
+  namespace: gpu
+---
+kind: ClusterRoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: scheduler
+  namespace: gpu
+subjects:
+- kind: ServiceAccount
+  name: scheduler
+  namespace: gpu
+roleRef:
+  kind: ClusterRole
+  name: cluster-admin
+  apiGroup: rbac.authorization.k8s.io
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -21,7 +59,9 @@ spec:
         - name: regcred
       containers:
         - name: gpu-schedule
-          image: ketidevit2/keti-gpu-scheduler:v0.273
+          image: ketidevit2/keti-gpu-scheduler:v0.276
+          # args:
+          #   - --debugging=on
           volumeMounts:
             - name: tz-config
               mountPath: /etc/localtime
@@ -44,3 +84,15 @@ spec:
         - name: config
           hostPath:
             path: /root/.kube
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: gpu-scheduler-configmap
+  namespace: gpu
+data:
+  node-gpu-score-weight : "0.4:0.6"
+  pod-re-schedule-permit : "true"
+  node-reservation-permit : "false"
+  nvlink-weight-percentage : "10"
+  gpu-allocate-prefer : "spread"
