--- a/deployments/gpu-scheduler-configmap.yaml
+++ b/deployments/gpu-scheduler-configmap.yaml
@@ -4,6 +4,14 @@ metadata:
   name: gpu-scheduler-configmap
   namespace: gpu
 data:
-  node-gpu-score-weight : "0.4:0.6"
-  nvlink-weight-percentage : "10"
-  gpu-allocate-prefer : "spread"
+  node-gpu-score-weight : "0.3:0.7"
+  nvlink-weight-percentage : "20"
+  gpu-allocate-prefer : "binpack"
+  node-reservation-permit : "false"
+  pod-re-schedule-permit : "false"
+  avoid-nvlink-one-gpu : "false"
+  multi-node-allocation-permit : "false"
+  non-gpu-node-prefer : "false"
+  multi-gpu-node-prefer : "true"
+  least-score-node-prefer : "true"
+  avoid-high-score-node : "false"
