--- a/deployments/gpu-scheduler-policy-update2.yaml
+++ b/deployments/gpu-scheduler-policy-update2.yaml
@@ -6,12 +6,12 @@ metadata:
 data:
   node-gpu-score-weight : "0.3:0.7"
   nvlink-weight-percentage : "30"
-  gpu-allocate-prefer : "binpack"
-  node-reservation-permit : "false"
-  pod-re-schedule-permit : "false"
-  avoid-nvlink-one-gpu : "false"
+  gpu-allocate-prefer : "spread"
+  node-reservation-permit : "true"
+  pod-re-schedule-permit : "true"
+  avoid-nvlink-one-gpu : "true"
   multi-node-allocation-permit : "false"
   non-gpu-node-prefer : "false"
-  multi-gpu-node-prefer : "true"
+  multi-gpu-node-prefer : "false"
   least-score-node-prefer : "false"
-  avoid-high-score-node : "true"
+  avoid-high-score-node : "false"
