--- a/deployments/gpu-scheduler-total.yaml
+++ b/deployments/gpu-scheduler-total.yaml
@@ -39,7 +39,7 @@ roleRef:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: gpu-scheduler-configmap
+  name: gpu-scheduler-policy
   namespace: gpu
 data:
   node-gpu-score-weight : "0.4:0.6"
@@ -83,8 +83,8 @@ spec:
           volumeMounts:
             - name: tz-config
               mountPath: /etc/localtime
-            - name: gpu-scheduler-configmap
-              mountPath: /gpu-scheduler-configmap
+            - name: gpu-scheduler-policy
+              mountPath: /gpu-scheduler-policy
             - name: config
               mountPath: /root/.kube/  
           resources:
@@ -94,14 +94,14 @@ spec:
               memory: "200Mi"
           env:
           - name: DEBUGG_LEVEL
-            value: "LEVEL1"
+            value: "LEVEL2"
       volumes:
         - name: tz-config
           hostPath:
             path: /usr/share/zoneinfo/Asia/Seoul
-        - name: gpu-scheduler-configmap
+        - name: gpu-scheduler-policy
           configMap:
-            name: gpu-scheduler-configmap
+            name: gpu-scheduler-policy
         - name: config
           hostPath:
             path: /root/.kube
