--- a/deployments/gpu-scheduler-policy-update2.yaml
+++ b/deployments/gpu-scheduler-policy-update2.yaml
@@ -7,11 +7,11 @@ data:
   node-gpu-score-weight : "0.3:0.7"
   nvlink-weight-percentage : "30"
   gpu-allocate-prefer : "spread"
-  node-reservation-permit : "true"
-  pod-re-schedule-permit : "true"
+  node-reservation-permit : "false"
+  pod-re-schedule-permit : "false"
   avoid-nvlink-one-gpu : "true"
   multi-node-allocation-permit : "false"
   non-gpu-node-prefer : "false"
-  multi-gpu-node-prefer : "false"
+  multi-gpu-node-prefer : "true"
   least-score-node-prefer : "false"
   avoid-high-score-node : "false"
